Ensure nav items span full row and centre alignment

--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -61,12 +61,23 @@
 
 .nav {
   background-color: #C50208;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  text-align: center;
+  height: 10%;
+}
+
+.nav ul {
+  display: grid;
+  display: contents
 }
 
 .nav ul li {
   font-size: 16px;
   text-transform: uppercase;
   display: grid;
+  align-items: center;
+  justify-content: center;
 }
 
 .article {
